fix bug preventing table title to word break at any character, causing long titles to push close button off screen

--- a/stylesheets/embed-table.scss
+++ b/stylesheets/embed-table.scss
@@ -225,6 +225,7 @@ $columns-table-accent-color: 	#69A368;
 	font-size: 18px; 
 	font-weight: bold;
 	text-align: left;
+	word-break: break-all;
 }
 
 .columns-table-subtitle {
